@@ -1,0 +1,11 @@
+<?php
+
+namespace App;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Card extends Model
+{
+    //
+    protected $fillable = ['description'];
+}
