@@ -48,6 +48,13 @@ class Handler extends ExceptionHandler
      */
     public function render($request, Exception $exception)
     {
+        if ($exception instanceof \Illuminate\Database\Eloquent\ModelNotFoundException) 
+      {
+       return response()->json([
+            'message' => 'Resource not found'
+        ], 404);
+      }
+
         return parent::render($request, $exception);
     }
 }
