@@ -1,7 +1,7 @@
 <?php
 
 use Illuminate\Http\Request;
-
+use App\Card;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -13,6 +13,27 @@ use Illuminate\Http\Request;
 |
 */
 
+
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
 });
+
+/**
+** Basic Routes for a RESTful service:
+**
+** Route::get($uri, $callback);
+** Route::post($uri, $callback);
+** Route::put($uri, $callback);
+** Route::delete($uri, $callback);
+**
+**/
+ 
+Route::get('cards', 'CardsController@index');
+ 
+Route::get('cards/{card}', 'CardsController@show');
+ 
+Route::post('cards','CardsController@store');
+ 
+Route::put('cards/{card}','CardsController@update');
+ 
+Route::delete('cards/{card}', 'CardsController@delete');
